adicionando funções para gerenciar forms de candidato

--- a/Frontend/public/candidatos/competencias.html
+++ b/Frontend/public/candidatos/competencias.html
@@ -25,257 +25,18 @@
           <div class="container text-center">
                <h2 class="fw-bold py-lg-4">Quais são seus pontos mais fortes?</h2>
                <form id="forms_competencias_candidato">
-                    <div class="row row-cols-sm-8 row-cols-md-8 row-cols-lg-10 g-lg-3 g-2 p-4 d-flex">
-                         <!-- Competência 1: Java -->
-                         <div class="col p-1">
-                              <input type="checkbox" class="btn-check" id="btn-check-java">
-                              <label class="btn btn-outline-dark" for="btn-check-java">Java</label>
-                         </div>
-                         <!-- Competência 2: Python -->
-                         <div class="col p-1">
-                              <input type="checkbox" class="btn-check" id="btn-check-python">
-                              <label class="btn btn-outline-dark" for="btn-check-python">Python</label>
-                         </div>
-
-                         <!-- Competência 3: JavaScript -->
-                         <div class="col p-1">
-                              <input type="checkbox" class="btn-check" id="btn-check-javascript">
-                              <label class="btn btn-outline-dark" for="btn-check-javascript">JavaScript</label>
-                         </div>
-
-                         <!-- Competência 4: HTML -->
-                         <div class="col p-1">
-                              <input type="checkbox" class="btn-check" id="btn-check-html">
-                              <label class="btn btn-outline-dark" for="btn-check-html">HTML</label>
-                         </div>
-
-                         <!-- Competência 5: CSS -->
-                         <div class="col p-1">
-                              <input type="checkbox" class="btn-check" id="btn-check-css">
-                              <label class="btn btn-outline-dark" for="btn-check-css">CSS</label>
-                         </div>
-
-                         <!-- Competência 6: React -->
-                         <div class="col p-1">
-                              <input type="checkbox" class="btn-check" id="btn-check-react">
-                              <label class="btn btn-outline-dark" for="btn-check-react">React</label>
-                         </div>
-
-                         <!-- Competência 7: Node.js -->
-                         <div class="col p-1">
-                              <input type="checkbox" class="btn-check" id="btn-check-nodejs">
-                              <label class="btn btn-outline-dark" for="btn-check-nodejs">Node.js</label>
-                         </div>
-
-                         <!-- Competência 8: Angular -->
-                         <div class="col p-1">
-                              <input type="checkbox" class="btn-check" id="btn-check-angular">
-                              <label class="btn btn-outline-dark" for="btn-check-angular">Angular</label>
-                         </div>
-
-                         <!-- Competência 9: Vue.js -->
-                         <div class="col p-1">
-                              <input type="checkbox" class="btn-check" id="btn-check-vuejs">
-                              <label class="btn btn-outline-dark" for="btn-check-vuejs">Vue.js</label>
-                         </div>
-
-                         <!-- Competência 10: PHP -->
-                         <div class="col p-1">
-                              <input type="checkbox" class="btn-check" id="btn-check-php">
-                              <label class="btn btn-outline-dark" for="btn-check-php">PHP</label>
-                         </div>
-                         <!-- Competência 11: Ruby -->
-                         <div class="col p-1">
-                              <input type="checkbox" class="btn-check" id="btn-check-ruby">
-                              <label class="btn btn-outline-dark" for="btn-check-ruby">Ruby</label>
-                         </div>
-
-                         <!-- Competência 12: C# -->
-                         <div class="col p-1">
-                              <input type="checkbox" class="btn-check" id="btn-check-csharp">
-                              <label class="btn btn-outline-dark" for="btn-check-csharp">C#</label>
-                         </div>
-
-                         <!-- Competência 13: Swift -->
-                         <div class="col p-1">
-                              <input type="checkbox" class="btn-check" id="btn-check-swift">
-                              <label class="btn btn-outline-dark" for="btn-check-swift">Swift</label>
-                         </div>
-                         <!-- Competência 14: Ruby on Rails -->
-                         <div class="col p-1">
-                              <input type="checkbox" class="btn-check" id="btn-check-ror">
-                              <label class="btn btn-outline-dark" for="btn-check-ror">Ruby</label>
-                         </div>
-
-                         <!-- Competência 15: TypeScript -->
-                         <div class="col p-1">
-                              <input type="checkbox" class="btn-check" id="btn-check-typescript">
-                              <label class="btn btn-outline-dark" for="btn-check-typescript">TypeScript</label>
-                         </div>
-
-                         <!-- Competência 16: Kotlin -->
-                         <div class="col p-1">
-                              <input type="checkbox" class="btn-check" id="btn-check-kotlin">
-                              <label class="btn btn-outline-dark" for="btn-check-kotlin">Kotlin</label>
-                         </div>
-
-                         <!-- Competência 17: Go -->
-                         <div class="col p-1">
-                              <input type="checkbox" class="btn-check" id="btn-check-go">
-                              <label class="btn btn-outline-dark" for="btn-check-go">Go</label>
-                         </div>
-
-                         <!-- Competência 18: Rust -->
-                         <div class="col p-1">
-                              <input type="checkbox" class="btn-check" id="btn-check-rust">
-                              <label class="btn btn-outline-dark" for="btn-check-rust">Rust</label>
-                         </div>
-
-                         <!-- Competência 19: Vue.js -->
-                         <div class="col p-1">
-                              <input type="checkbox" class="btn-check" id="btn-check-vuejs2">
-                              <label class="btn btn-outline-dark" for="btn-check-vuejs2">Vue.js</label>
-                         </div>
-
-                         <!-- Competência 20: Scala -->
-                         <div class="col p-1">
-                              <input type="checkbox" class="btn-check" id="btn-check-scala">
-                              <label class="btn btn-outline-dark" for="btn-check-scala">Scala</label>
-                         </div>
-
-                         <!-- Competência 21: Design de Interface -->
-                         <div class="col p-1">
-                              <input type="checkbox" class="btn-check" id="btn-check-design">
-                              <label class="btn btn-outline-dark" for="btn-check-design">Design de Interface</label>
-                         </div>
-
-                         <!-- Competência 22: UX/UI Design -->
-                         <div class="col p-1">
-                              <input type="checkbox" class="btn-check" id="btn-check-uxui">
-                              <label class="btn btn-outline-dark" for="btn-check-uxui">UX/UI Design</label>
-                         </div>
-
-                         <!-- Competência 23: Marketing Digital -->
-                         <div class="col p-1">
-                              <input type="checkbox" class="btn-check" id="btn-check-marketing">
-                              <label class="btn btn-outline-dark" for="btn-check-marketing">Marketing Digital</label>
-                         </div>
-
-                         <!-- Competência 24: Gerenciamento de Projetos -->
-                         <div class="col p-1">
-                              <input type="checkbox" class="btn-check" id="btn-check-gestao">
-                              <label class="btn btn-outline-dark" for="btn-check-gestao">Gerenciamento de
-                                   Projetos</label>
-                         </div>
-
-                         <!-- Competência 25: Análise de Dados -->
-                         <div class="col p-1">
-                              <input type="checkbox" class="btn-check" id="btn-check-analise">
-                              <label class="btn btn-outline-dark" for="btn-check-analise">Análise de Dados</label>
-                         </div>
-
-                         <!-- Competência 26: Redes de Computadores -->
-                         <div class="col p-1">
-                              <input type="checkbox" class="btn-check" id="btn-check-redes">
-                              <label class="btn btn-outline-dark" for="btn-check-redes">Redes de Computadores</label>
-                         </div>
-
-                         <!-- Competência 27: Segurança da Informação -->
-                         <div class="col p-1">
-                              <input type="checkbox" class="btn-check" id="btn-check-seguranca">
-                              <label class="btn btn-outline-dark" for="btn-check-seguranca">Segurança da
-                                   Informação</label>
-                         </div>
-
-                         <!-- Competência 28: Animação 3D -->
-                         <div class="col p-1">
-                              <input type="checkbox" class="btn-check" id="btn-check-animacao">
-                              <label class="btn btn-outline-dark" for="btn-check-animacao">Animação 3D</label>
-                         </div>
-
-                         <!-- Competência 29: Arquitetura de Software -->
-                         <div class="col p-1">
-                              <input type="checkbox" class="btn-check" id="btn-check-arquitetura">
-                              <label class="btn btn-outline-dark" for="btn-check-arquitetura">Arquitetura de
-                                   Software</label>
-                         </div>
-
-                         <!-- Competência 30: Fotografia -->
-                         <div class="col p-1">
-                              <input type="checkbox" class="btn-check" id="btn-check-fotografia">
-                              <label class="btn btn-outline-dark" for="btn-check-fotografia">Fotografia</label>
-                         </div>
-
-                         <!-- Competência 31: Mídias Sociais -->
-                         <div class="col p-1">
-                              <input type="checkbox" class="btn-check" id="btn-check-midias">
-                              <label class="btn btn-outline-dark" for="btn-check-midias">Mídias Sociais</label>
-                         </div>
-
-                         <!-- Competência 32: SEO (Otimização de Mecanismos de Busca) -->
-                         <div class="col p-1">
-                              <input type="checkbox" class="btn-check" id="btn-check-seo">
-                              <label class="btn btn-outline-dark" for="btn-check-seo">SEO</label>
-                         </div>
-
-                         <!-- Competência 33: Marketing de Conteúdo -->
-                         <div class="col p-1">
-                              <input type="checkbox" class="btn-check" id="btn-check-conteudo">
-                              <label class="btn btn-outline-dark" for="btn-check-conteudo">Marketing de Conteúdo</label>
-                         </div>
-
-                         <!-- Competência 34: Logística -->
-                         <div class="col p-1">
-                              <input type="checkbox" class="btn-check" id="btn-check-logistica">
-                              <label class="btn btn-outline-dark" for="btn-check-logistica">Logística</label>
-                         </div>
-
-                         <!-- Competência 35: Finanças -->
-                         <div class="col p-1">
-                              <input type="checkbox" class="btn-check" id="btn-check-financas">
-                              <label class="btn btn-outline-dark" for="btn-check-financas">Finanças</label>
-                         </div>
-
-                         <!-- Competência 36: Recursos Humanos -->
-                         <div class="col p-1">
-                              <input type="checkbox" class="btn-check" id="btn-check-rh">
-                              <label class="btn btn-outline-dark" for="btn-check-rh">Recursos Humanos</label>
-                         </div>
-
-                         <!-- Competência 37: Gestão de Projetos -->
-                         <div class="col p-1">
-                              <input type="checkbox" class="btn-check" id="btn-check-gestao-projetos">
-                              <label class="btn btn-outline-dark" for="btn-check-gestao-projetos">Gestão de
-                                   Projetos</label>
-                         </div>
-
-                         <!-- Competência 38: Gestão de Pessoas -->
-                         <div class="col p-1">
-                              <input type="checkbox" class="btn-check" id="btn-check-gestao-pessoas">
-                              <label class="btn btn-outline-dark" for="btn-check-gestao-pessoas">Gestão de
-                                   Pessoas</label>
-                         </div>
-
-                         <!-- Competência 39: Psicologia Organizacional -->
-                         <div class="col p-1">
-                              <input type="checkbox" class="btn-check" id="btn-check-psicologia">
-                              <label class="btn btn-outline-dark" for="btn-check-psicologia">Psicologia
-                                   Organizacional</label>
-                         </div>
-
-                         <!-- Competência 40: Marketing de Eventos -->
-                         <div class="col p-1">
-                              <input type="checkbox" class="btn-check" id="btn-check-eventos">
-                              <label class="btn btn-outline-dark" for="btn-check-eventos">Marketing de Eventos</label>
-                         </div>
+                    <div class="row row-cols-sm-8 row-cols-md-8 row-cols-lg-10 g-lg-3 g-2 p-4 d-flex"
+                         id="carregar_competencias">
+                         <!-- Carga de Competências -->
                     </div>
-                    
+
                     <div class="col-12 text-md-end">
                          <button type="submit" class="btn btn-primary ml-auto">Próxima Etapa</button>
                     </div>
                </form>
           </div>
      </section>
+
      <script src="./../app.min.js"></script>
 </body>
 
