--- a/Frontend/public/candidatos/cadastro.html
+++ b/Frontend/public/candidatos/cadastro.html
@@ -21,7 +21,7 @@
      <section class="py-5 container">
                <div class="col-lg-6 col-md-8 mx-auto">
                     <h2 class="fw-bold py-lg-4">Queremos te conhecer melhor...</h2>
-                    <form class="row g-3" id="forms_candidato">
+                    <form class="row g-3" id="forms_candidato" action="./competencias.html">
                          <div class="col-md-12">
                               <label for="" class="form-label">Seu nome completo:</label>
                               <input type="text" class="form-control" name="nome_candidato">
