Acertando Visualização de Vagas e Estrutura JSON

--- a/Frontend/public/candidatos/visualizacao.html
+++ b/Frontend/public/candidatos/visualizacao.html
@@ -26,9 +26,58 @@
 
                <h2 class="fw-bold py-lg-4">Suas oportunidades de Match</h2>
                <div class="row row-cols-1 row-cols-lg-3 row-cols-sm-1 col-xs-1 g-2 g-lg-3" id="carregar_vagas">
-                    <!--Carga de Vagas-->               
-               </div>
-          </div>
+                    <!--Carga de Vagas-->
+
+                    <!--Definição do Card de Apresentação da Vaga-->
+                    <div class="col">
+                         <div class="card text-center text-bg-light mb-3 p-3">
+                              <h5 class="card-header fw-bold">
+                                   Desenvolvedor Java Júnior
+                              </h5>
+
+                              <div class="card-body placeholder-glow">
+                                   <h5 class="card-title placeholder">ZG SOLUÇÕES</h5>
+                                   <i class='fas fa-question-circle' style='font-size:24px' data-bs-toggle="tooltip"
+                                        data-bs-title="Somos a maior multinacional brasileira e estamos entre as 100 maiores empresas de TI do mundo. Estamos presentes em 41 países com +30k colaboradores. Nosso principal objetivo auxiliar os clientes a encontrar, por meio de soluções personalizadas, a maneira ideal para alcançar seus desafios, impulsionando a inovação digital."></i>
+                                   <p class="card-text">
+                                        Requisitos necessários:
+
+                                        Graduação em curso de nível superior na área de Tecnologia da Informação, ou
+                                        conclusão de qualquer curso de nível superior acompanhado de certificado de
+                                        curso de pós-graduação (especialização, mestrado ou doutorado) na área de
+                                        Tecnologia</p>
+                                   <span class="badge text-bg-warning">#JAVA</span>
+                                   <span class="badge text-bg-warning">#GROOVY</span>
+                                   <span class="badge text-bg-warning">#JAVASCRIPT</span>
+                                   <span class="badge text-bg-warning">#DOCKER</span>
+                                   <hr>
+                                   <div class="hstack gap-3">
+                                        <div class="p-2">
+                                             <button class="btn btn-success btn-lg"><i
+                                                       class="far fa-thumbs-up"></i></button>
+                                        </div>
+                                        <div class="p-2 ms-auto">
+                                             <strong>
+                                                  <span>75% Compatível</span>
+                                             </strong>
+                                        </div>
+                                        <div class="p-2">
+                                             <button class="btn btn-danger btn-lg"><i
+                                                       class="far fa-thumbs-down"></i></button>
+                                        </div>
+                                   </div>
+                                   <div class="card-body alert alert-success" role="alert">
+                                        Você <strong>curtiu</strong> esta Vaga!
+                                   </div>
+                                   <div class="card-body alert alert-danger" role="alert">
+                                        Você <strong>não curtiu</strong> esta Vaga!
+                                   </div>
+                              </div>
+                              <div class="card-footer text-body-secondary">
+                                   Publicada há dois dias atrás
+                              </div>
+                         </div>
+                    </div>
 
 
      </section>
