Finalizando Requisitos da Aplicação

--- a/Frontend/public/empresas/grafico.html
+++ b/Frontend/public/empresas/grafico.html
@@ -42,13 +42,14 @@
                               </a>
                               <ul class="dropdown-menu text-small" aria-labelledby="dropdownUser1">
                                    <li><a class="dropdown-item" href="#">Meus matchs</a></li>
-                                   <li><a class="dropdown-item" href="#">Visualizar matchs</a></li>
+                                   <li><a class="dropdown-item" href="visualizacao.html">Visualizar matchs</a></li>
                                    <li><a class="dropdown-item" href="vagas.html">Criar vagas</a></li>
+                                   <li><a class="dropdown-item" href="grafico.html">Dashboard</a></li>
                                    <li><a class="dropdown-item" href="#">Configurações</a></li>
                                    <li>
                                         <hr class="dropdown-divider">
                                    </li>
-                                   <li><a class="dropdown-item" href="#">Finalizar sessão</a></li>
+                                   <li><a class="dropdown-item" href="../index.html">Finalizar sessão</a></li>
                               </ul>
                          </div>
                     </div>
