--- a/Frontend/public/index.html
+++ b/Frontend/public/index.html
@@ -23,11 +23,10 @@
           <div class="container">
                <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
                     <a href="/" class="d-flex mb-2 mb-lg-0 text-dark text-decoration-none">
-                         <h2 class="fw-bold px-25">Linketinder</h2>
+                         <h2 class="fw-bold px-2">Linketinder</h2>
                     </a>
 
                     <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-
                     </ul>
 
                     <div class="text-end">
@@ -76,7 +75,7 @@
                     relações
                     profissionais duradouras e bem-sucedidas.</p>
                <p>
-                    <a href="candidatos/cadastro.html" class="btn btn-primary my-2">Conhecer mais</a>
+                    <a href="" class="btn btn-primary my-2">Conhecer mais</a>
                </p>
           </div>
      </section>
