--- a/Frontend/public/candidatos/cadastro.html
+++ b/Frontend/public/candidatos/cadastro.html
@@ -36,18 +36,22 @@
      <section class="py-1 container">
           <div class="container">
                <h2 class="fw-bold py-lg-4">Queremos te conhecer melhor...</h2>
-               <form class="row g-3" id="forms_candidato" action="visualizacao.html">
+               <form class="row g-3" id="forms_candidato" class="needs-validation"
+                    novalidate>
                     <div class="col-12 col-md-6">
                          <label for="" class="form-label">Seu nome completo:</label>
-                         <input type="text" class="form-control" name="nome_candidato">
+                         <input type="text" class="form-control" name="nome_candidato" required>
+                         <div class="invalid-feedback">Por favor, insira um nome válido.</div>
                     </div>
                     <div class="col-12 col-md-6">
                          <label for="" class="form-label">Email:</label>
-                         <input type="email" class="form-control" name="email_candidato">
+                         <input type="email" class="form-control" name="email_candidato" required>
+                         <div class="invalid-feedback">Por favor, insira um e-mail válido.</div>
                     </div>
                     <div class="col-12 col-md-4">
                          <label for="" class="form-label">Data de Nascimento:</label>
-                         <input type="date" class="form-control" name="data_nascimento_candidato">
+                         <input type="date" class="form-control" name="data_nascimento_candidato" required>
+                         <div class="invalid-feedback">Por favor, insira uma Data válida.</div>
                     </div>
                     <div class="col-12 col-md-4">
                          <label for="" class="form-label">Inscrição do CPF:</label>
